--- a/packages/ibm-products-styles/src/components/Coachmark/_coachmark-overlay.scss
+++ b/packages/ibm-products-styles/src/components/Coachmark/_coachmark-overlay.scss
@@ -73,45 +73,19 @@ $draghandle-btn-class: #{$block-class}__handle;
     visibility: visible;
   }
 
-  // CARET STYLING
-  &__caret {
-    // background-color: this property is set in _coachmark-overlay-theme.scss
-    position: absolute;
-    z-index: 5902;
-    width: 0;
-    height: 0;
-    // border-bottom-color: this property is set in _coachmark-overlay-theme.scss
-    border-right: $caret-center solid transparent;
-    border-bottom: solid $caret-center $background-inverse;
-    border-left: $caret-center solid transparent;
-  }
-
-  // OVERLAY AND CARET POSITIONING
+  // OVERLAY POSITIONING
   &--top {
     $horizontal-push: calc($distance-offset - $caret-center);
     $translate-y: calc(-1 * (100% + $distance-offset + $caret-height));
 
     transform: translate(-50%, $translate-y);
 
-    .#{$block-class}__caret {
-      left: calc(50% - $caret-center);
-      transform: rotate(180deg);
-    }
-
     &-left {
       transform: translate(calc(-1 * $distance-offset), $translate-y);
-      .#{$block-class}__caret {
-        left: $horizontal-push;
-        transform: rotate(180deg);
-      }
     }
 
     &-right {
       transform: translate(calc(-1 * (100% - $distance-offset)), $translate-y);
-      .#{$block-class}__caret {
-        right: $horizontal-push;
-        transform: rotate(180deg);
-      }
     }
   }
 
@@ -121,26 +95,13 @@ $draghandle-btn-class: #{$block-class}__handle;
     $translate-y: calc($distance-offset + $caret-height);
 
     transform: translate(-50%, $translate-y);
-    .#{$block-class}__caret {
-      top: $top;
-      left: calc(50% - $caret-center);
-    }
 
     &-left {
       transform: translate(calc(-1 * $distance-offset), $translate-y);
-      .#{$block-class}__caret {
-        top: $top;
-        left: $horizontal-push;
-      }
     }
 
     &-right {
       transform: translate(calc(-1 * (100% - $distance-offset)), $translate-y);
-
-      .#{$block-class}__caret {
-        top: $top;
-        right: $horizontal-push;
-      }
     }
   }
 
@@ -150,28 +111,13 @@ $draghandle-btn-class: #{$block-class}__handle;
     $vertical-push: calc($distance-offset - ($caret-height * 0.5));
 
     transform: translate($translate-x, -50%);
-    .#{$block-class}__caret {
-      top: calc(50% - ($caret-height * 0.5));
-      right: $right;
-      transform: rotate(90deg);
-    }
 
     &-top {
       transform: translate($translate-x, calc(-1 * $distance-offset));
-      .#{$block-class}__caret {
-        top: $vertical-push;
-        right: $right;
-        transform: rotate(90deg);
-      }
     }
 
     &-bottom {
       transform: translate($translate-x, calc(-1 * (100% - $distance-offset)));
-      .#{$block-class}__caret {
-        right: $right;
-        bottom: $vertical-push;
-        transform: rotate(90deg);
-      }
     }
   }
 
@@ -181,28 +127,13 @@ $draghandle-btn-class: #{$block-class}__handle;
     $vertical-push: calc($distance-offset - ($caret-height * 0.5));
 
     transform: translate($translate-x, -50%);
-    .#{$block-class}__caret {
-      top: calc(50% - ($caret-height * 0.5));
-      left: $left;
-      transform: rotate(-90deg);
-    }
 
     &-top {
       transform: translate($translate-x, calc(-1 * $distance-offset));
-      .#{$block-class}__caret {
-        top: $vertical-push;
-        left: $left;
-        transform: rotate(-90deg);
-      }
     }
 
     &-bottom {
       transform: translate($translate-x, calc(-1 * (100% - $distance-offset)));
-      .#{$block-class}__caret {
-        bottom: $vertical-push;
-        left: $left;
-        transform: rotate(-90deg);
-      }
     }
   }
 
