fix(OptionsTile): fix linting issues

--- a/packages/ibm-products-styles/src/components/OptionsTile/_options-tile.scss
+++ b/packages/ibm-products-styles/src/components/OptionsTile/_options-tile.scss
@@ -163,17 +163,20 @@ $block-class: #{c4p-settings.$pkg-prefix}--options-tile;
   overflow: hidden;
 }
 
-.#{$block-class}__summary.#{$block-class}__summary--open:not(.#{$block-class}__summary--closing),
+.#{$block-class}__summary.#{$block-class}__summary--open:not(
+    .#{$block-class}__summary--closing
+  ),
 .#{$block-class}__summary--hidden {
   height: 0;
   margin-top: 0;
   opacity: 0;
 }
 
-.#{$block-class}__chevron.#{$block-class}__chevron--open:not(.#{$block-class}__chevron--closing) {
+.#{$block-class}__chevron.#{$block-class}__chevron--open:not(
+    .#{$block-class}__chevron--closing
+  ) {
   transform: rotate(180deg);
 }
-
 
 .#{$block-class} > details[open] .#{$block-class}__content {
   padding-top: $spacing-03;
