--- a/packages/ibm-products-styles/src/components/_index-released-only.scss
+++ b/packages/ibm-products-styles/src/components/_index-released-only.scss
@@ -23,6 +23,7 @@
 @use './EmptyStates';
 @use './ExportModal';
 @use './ExpressiveCard';
+@use './FullPageError';
 @use './HTTPErrors';
 @use './ImportModal';
 @use './MultiAddSelect';
