--- a/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_FilterFlyout.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_FilterFlyout.scss
@@ -9,7 +9,7 @@
 
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/layout/scss/convert' as *;
-@use '@carbon/styles/scss/spacing' as *;
+@use '@carbon/styles/scss/spacing';
 @use '@carbon/styles/scss/type' as *;
 @use '@carbon/layout' as *;
 
@@ -25,7 +25,7 @@ $action-set-height: to-rem(64px);
 
 .#{variables.$block-class}-filter-flyout {
   position: absolute;
-  top: $spacing-09;
+  top: spacing.$spacing-09;
   right: 0;
   display: none;
   /* stylelint-disable-next-line -- to-rem carbon replacement for rem */
@@ -53,7 +53,8 @@ $action-set-height: to-rem(64px);
 }
 
 .#{variables.$block-class}-filter-flyout__inner-container {
-  padding: $spacing-05 $spacing-05 $spacing-09 $spacing-05;
+  padding: spacing.$spacing-05 spacing.$spacing-05 spacing.$spacing-09
+    spacing.$spacing-05;
 }
 
 .#{variables.$block-class}-filter-flyout__inner-container::before {
@@ -74,7 +75,7 @@ $action-set-height: to-rem(64px);
   display: block;
   @include type-style('heading-compact-01');
 
-  margin-bottom: $spacing-06;
+  margin-bottom: spacing.$spacing-06;
 }
 
 .#{variables.$block-class}-filter-flyout__filters {
