feat(ConditionBuilder): handle keyboard navigation fixes

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
@@ -49,7 +49,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 }
 .#{$block-class}__condition-block {
   display: flex;
-  width: max-content;
+  width: fit-content;
   flex-direction: row;
 }
 .#{$block-class}__content-container {
