feat(conditionBuilder): accessibilty and generic issue fixes

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
@@ -69,3 +69,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 .#{$block-class}__group-separator {
   margin-top: $spacing-02;
 }
+.#{$block-class}__add-group,
+.#{$block-class}__group-separator {
+  width: fit-content;
+}
