feat(ConditionBuilder): design review changes

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
@@ -73,3 +73,6 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 .#{$block-class}__group-separator {
   width: fit-content;
 }
+.#{$block-class}__tooltip {
+  word-break: break-all;
+}
