fix(ConditionBuilder): incomplete state icon and text order

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
@@ -286,6 +286,7 @@ $colors: (
 
 .#{$block-class}__invalid-input {
   display: flex;
+  direction: rtl;
 }
 .#{$block-class}__invalid-input > svg {
   color: $support-warning;
