--- a/packages/ibm-products-styles/src/components/CreateFullPage/_create-full-page.scss
+++ b/packages/ibm-products-styles/src/components/CreateFullPage/_create-full-page.scss
@@ -23,10 +23,10 @@ $step-block-class: #{c4p-settings.$pkg-prefix}--create-full-page__step;
 
 .#{$block-class} {
   display: grid;
-  height: 100%;
+  overflow: hidden;
+  height: 100vh;
   color: $text-primary;
   grid-template-rows: minmax(auto, 100%);
-
   &:has(.#{$block-class}__header) {
     grid-template-rows: auto minmax(auto, 100%);
   }
