fix(Datagrid): csp violation (#5831)
* fix(Datagrid): csp voilation

* fix(Datagrid): fix CI / test-c4p

* fix(Datagrid): review changes

* fix(Datagrid): remove template string

---------

Co-authored-by: elysia <elysia.hwang@gmail.com>
Co-authored-by: Matt Gallo <mdgallo@us.ibm.com>

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useActionsColumn.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useActionsColumn.scss
@@ -36,3 +36,7 @@
 .#{variables.$block-class} .#{variables.$block-class}__disabled-row-action svg {
   fill: theme.$layer-selected-disabled;
 }
+
+.#{variables.$block-class}_actions-column {
+  display: flex;
+}
