feat(conditionBuilder): enhancing the conditional operators

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
@@ -54,7 +54,8 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 }
 
 .#{$block-class}__item-option__option {
-  height: 2rem;
+  display: grid;
+  min-height: 2rem;
   cursor: pointer;
   padding-inline: $spacing-05;
 }
@@ -295,5 +296,13 @@ $colors: (
   /* stylelint-disable max-nesting-depth */
   > path:first-child {
     fill: $icon-primary;
+  }
+}
+
+.#{$block-class}__statement_wrapper {
+  padding: $spacing-03 0;
+
+  :nth-child(2) {
+    color: $text-secondary;
   }
 }
