feat(datagrids): Add custom batch actions display min (#5776)
* fix: display min

* fix: add icon only example

* fix: review comments

* fix: set to default of 3 per design

* fix: use cx class

* fix: code comment

* fix: remove margin left

fix: remove margin left

* fix: add unit test

fix: add unit test

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -790,6 +790,12 @@
 }
 
 .#{$block-class}
+  .#{c4p-settings.$carbon-prefix}--noLabel
+  svg.#{c4p-settings.$carbon-prefix}--btn__icon {
+  margin-inline-start: 0;
+}
+
+.#{$block-class}
   .#{c4p-settings.$carbon-prefix}--action-list
   .#{c4p-settings.$carbon-prefix}--btn__icon {
   margin-top: 0;
