--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -413,6 +413,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
 .#{$block-class} .#{c4p-settings.$carbon-prefix}--text-area,
 .#{$block-class} .#{c4p-settings.$carbon-prefix}--search-input,
 .#{$block-class} .#{c4p-settings.$carbon-prefix}--select-input,
+.#{$block-class} .#{c4p-settings.$carbon-prefix}--multi-select,
 .#{$block-class} .#{c4p-settings.$carbon-prefix}--dropdown,
 .#{$block-class} .#{c4p-settings.$carbon-prefix}--dropdown-list,
 .#{$block-class} .#{c4p-settings.$carbon-prefix}--number input[type='number'],
