--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -281,18 +281,12 @@
     align-items: center;
   }
 
-  .#{$block-class}__virtual-scrollbar {
-    //makes thin scrollbar in chrome and firefox
-    scrollbar-width: thin;
-  }
-
-  .#{$block-class}__virtual-scrollbar::-webkit-scrollbar-thumb {
-    background-color: $text-placeholder;
-  }
-
-  .#{$block-class}__virtual-scrollbar::-webkit-scrollbar {
-    width: 6px;
-    background-color: $background;
+  .#{$block-class}__fake-scrollbar {
+    right: 0;
+    bottom: 0;
+    width: 16px;
+    height: calc(100% - 48px);
+    overflow-y: auto;
   }
 
   .#{$block-class}__cell {
@@ -719,20 +713,6 @@
   flex: 0 0 auto;
   margin-right: $spacing-03;
 }
-
-.#{$block-class}__virtual-scrollbar::-webkit-scrollbar {
-  width: 10px;
-  height: 7px;
-}
-
-.#{$block-class}__virtual-scrollbar::-webkit-scrollbar-track {
-  background: $layer;
-}
-
-.#{$block-class}__virtual-scrollbar::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-}
-
 .#{$block-class}__virtualScrollContainer {
   width: 100%;
 }
