--- a/packages/ibm-products/src/components/AboutModal/_about-modal.scss
+++ b/packages/ibm-products/src/components/AboutModal/_about-modal.scss
@@ -45,8 +45,7 @@
     min-height: $layout-05;
     padding: 0 20% 0 $spacing-05;
     grid-row: auto;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden auto;
   }
 
   .#{$block-class}.#{$block-class}--with-tabs .#{$block-class}__body {
