--- a/packages/ibm-products/src/components/Coachmark/styles/_coachmark-tagline.scss
+++ b/packages/ibm-products/src/components/Coachmark/styles/_coachmark-tagline.scss
@@ -43,10 +43,7 @@
     &::before {
       position: absolute;
       z-index: -1;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
+      inset: 0;
       background: linear-gradient(90deg, $blue-70 0%, $purple-70 100%);
       content: '';
       opacity: 0;
