--- a/packages/ibm-products/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products/src/components/SidePanel/_side-panel.scss
@@ -435,10 +435,7 @@ $action-set-block-class: #{$pkg-prefix}--action-set;
   .#{$block-class}__overlay {
     position: fixed;
     z-index: z('overlay');
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
     width: 100%;
     height: 100%;
     background-color: $overlay-01;
