--- a/packages/security/src/components/LayoutModules/TitleBarModule/_index.scss
+++ b/packages/security/src/components/LayoutModules/TitleBarModule/_index.scss
@@ -22,8 +22,7 @@
     @include carbon--type-style($name: productive-heading-03);
 
     width: 100%;
-    margin-block-end: 0;
-    margin-block-start: 0;
+    margin-block: 0;
   }
 
   &--label > &__title {
