--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -231,24 +231,24 @@
 }
 /* This section to be removed after support for slug dropped  - end */
 
-.#{$block-class} th.#{$block-class}__with-aiLabel {
+.#{$block-class} th.#{$block-class}__with-ai-label {
   /* stylelint-disable-next-line carbon/theme-token-use */
   box-shadow: inset 0 1px $ai-border-strong;
 }
 
-.#{$block-class} th.#{$block-class}__with-aiLabel,
-.#{$block-class} td.#{$block-class}__aiLabel--cell {
+.#{$block-class} th.#{$block-class}__with-ai-label,
+.#{$block-class} td.#{$block-class}__ai-label--cell {
   @include ai-table-gradient();
 }
 
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row,
+  tr.#{$block-class}__ai-label--row,
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row
+  tr.#{$block-class}__ai-label--row
   + .#{$block-class}__expanded-row {
   @include ai-table-gradient();
 
@@ -258,7 +258,7 @@
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row {
+  tr.#{$block-class}__ai-label--row {
   /* stylelint-disable-next-line carbon/theme-token-use */
   box-shadow: inset 1px 0 $ai-border-strong;
 }
@@ -266,27 +266,27 @@
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row:hover,
+  tr.#{$block-class}__ai-label--row:hover,
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row.#{c4p-settings.$carbon-prefix}--data-table--selected:hover,
+  tr.#{$block-class}__ai-label--row.#{c4p-settings.$carbon-prefix}--data-table--selected:hover,
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row.#{$block-class}__carbon-row-expanded:hover
+  tr.#{$block-class}__ai-label--row.#{$block-class}__carbon-row-expanded:hover
   + .#{$block-class}__expanded-row,
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__expandable-row--hover.#{$block-class}__aiLabel--row {
+  tr.#{$block-class}__expandable-row--hover.#{$block-class}__ai-label--row {
   @include ai-table-gradient('hover');
 }
 
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__expandable-row--hover.#{$block-class}__aiLabel--row
+  tr.#{$block-class}__expandable-row--hover.#{$block-class}__ai-label--row
   td {
   background-color: transparent;
 }
@@ -294,12 +294,12 @@
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
-  tr.#{$block-class}__aiLabel--row.#{c4p-settings.$carbon-prefix}--data-table--selected {
+  tr.#{$block-class}__ai-label--row.#{c4p-settings.$carbon-prefix}--data-table--selected {
   @include ai-table-gradient('selected');
 }
 
 .#{$block-class}
-  th.#{$block-class}__with-aiLabel
+  th.#{$block-class}__with-ai-label
   .#{c4p-settings.$carbon-prefix}--slug {
   margin-left: $spacing-03;
 }
@@ -391,7 +391,7 @@
   }
 
   .#{$block-class}__defaultStringRenderer.#{$block-class}__defaultStringRenderer--slug,
-  .#{$block-class}__defaultStringRenderer.#{$block-class}__defaultStringRenderer--aiLabel {
+  .#{$block-class}__defaultStringRenderer.#{$block-class}__defaultStringRenderer--ai-label {
     width: fit-content;
   }
 
@@ -967,7 +967,7 @@
   align-items: center;
 
   &.#{$block-class}__slug--expanded,
-  &.#{$block-class}__aiLabel--expanded {
+  &.#{$block-class}__ai-label--expanded {
     border: none;
   }
 }
