feat(Tearsheet): style path update

--- a/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.scss
+++ b/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.scss
@@ -24,8 +24,8 @@ $css--plex: true !default;
 $prefix: 'c4p';
 $carbon-prefix: 'cds';
 
-@use '../../../../ibm-products-styles/src/components/Tearsheet/index' as *;
-@use '../../../../ibm-products-styles/src/components/ActionSet/index' as *;
+@use '@carbon/ibm-products-styles/scss/components/Tearsheet/index' as *;
+@use '@carbon/ibm-products-styles/scss/components/ActionSet/index' as *;
 
 $block-class: #{$prefix}--tearsheet;
 $block-class-action-set: #{$prefix}--action-set;
