feat(card): adds duplicate classname until deprecation

--- a/packages/ibm-products-styles/src/components/Card/_card.scss
+++ b/packages/ibm-products-styles/src/components/Card/_card.scss
@@ -5,6 +5,8 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+// NOTE: Please do not remove the duplicate `slug` and `ai-label` classes. We need both until slug is fully deprecated
+
 // Standard imports.
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/spacing' as *;
@@ -148,16 +150,29 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   right: $spacing-05;
 }
 
-.#{$block-class}__header-container--has-aiLabel {
+.#{$block-class}__header-container--has-slug {
   width: 100%;
   padding-right: $spacing-07;
 }
 
-.#{$block-class}__header-container--has-aiLabel.#{$block-class}__header-container--has-actions {
+.#{$block-class}__header-container--has-ai-label {
+  width: 100%;
+  padding-right: $spacing-07;
+}
+
+.#{$block-class}__header-container--has-slug.#{$block-class}__header-container--has-actions {
   padding-right: $spacing-08;
 }
 
-.#{$block-class}__header-container--has-aiLabel.#{$block-class}__header-container--large-tile-or-label {
+.#{$block-class}__header-container--has-slug.#{$block-class}__header-container--large-tile-or-label {
+  padding-right: $spacing-09;
+}
+
+.#{$block-class}__header-container--has-ai-label.#{$block-class}__header-container--has-actions {
+  padding-right: $spacing-08;
+}
+
+.#{$block-class}__header-container--has-ai-label.#{$block-class}__header-container--large-tile-or-label {
   padding-right: $spacing-09;
 }
 
@@ -170,7 +185,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   pointer-events: none;
 }
 
-.#{$block-class}--has-aiLabel {
+.#{$block-class}--has-slug {
   @include utilities.ai-popover-gradient('default', 0, 'layer');
 
   border: 1px solid transparent;
@@ -178,7 +193,15 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
     0 4px 10px 2px $ai-drop-shadow;
 }
 
-.#{$block-class}__clickable.#{$block-class}--has-aiLabel::before {
+.#{$block-class}--has-ai-label {
+  @include utilities.ai-popover-gradient('default', 0, 'layer');
+
+  border: 1px solid transparent;
+  box-shadow: inset 0 -80px 70px -65px $ai-inner-shadow,
+    0 4px 10px 2px $ai-drop-shadow;
+}
+
+.#{$block-class}__clickable.#{$block-class}--has-slug::before {
   @include utilities.ai-popover-gradient('hover', 0, 'layer');
 
   position: absolute;
@@ -193,7 +216,26 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   transition: opacity $duration-fast-02 motion(standard, productive);
 }
 
-.#{$block-class}__clickable.#{$block-class}--has-aiLabel:hover::before {
+.#{$block-class}__clickable.#{$block-class}--has-ai-label::before {
+  @include utilities.ai-popover-gradient('hover', 0, 'layer');
+
+  position: absolute;
+  display: block;
+  block-size: 100%;
+  box-shadow: inset 0 -80px 70px -65px $ai-inner-shadow;
+  content: '';
+  inline-size: 100%;
+  inset-block-start: 0;
+  inset-inline-start: 0;
+  opacity: 0;
+  transition: opacity $duration-fast-02 motion(standard, productive);
+}
+
+.#{$block-class}__clickable.#{$block-class}--has-slug:hover::before {
+  opacity: 1;
+}
+
+.#{$block-class}__clickable.#{$block-class}--has-ai-label:hover::before {
   opacity: 1;
 }
 
