--- a/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
+++ b/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
@@ -182,7 +182,7 @@ $block-class-action-set: #{$prefix}--action-set;
   }
 
   .#{$block-class}[has-slug] {
-    @extend .#{$block-class}--has-ai-label;
+    @extend .#{c4p-settings.$pkg-prefix}--side-panel--has-ai-label;
   }
 
   [scrolls] {
