--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -109,6 +109,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     left: 0;
     border-right: 1px solid $border-subtle-02;
   }
+  &.#{$block-class}.#{$block-class}--has-slug,
   &.#{$block-class}.#{$block-class}--has-ai-label {
     border-color: transparent;
     box-shadow: inset 0 -80px 70px -65px $ai-inner-shadow,
@@ -195,12 +196,14 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
 
   &.#{$block-class}:has(.#{$block-class}__action-toolbar),
   &.#{$block-class}--has-action-toolbar,
+  &.#{$block-class}--has-slug,
   &.#{$block-class}--has-ai-label {
     --#{$block-class}--title-padding-right: #{$spacing-10};
   }
 
   &.#{$block-class}:has(.#{$block-class}__action-toolbar),
   &.#{$block-class}--has-action-toolbar {
+    &.#{$block-class}--has-slug,
     &.#{$block-class}--has-ai-label {
       --#{$block-class}--title-padding-right: #{$spacing-11};
     }
@@ -308,6 +311,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     padding-top: $spacing-03;
   }
 
+  &.#{$block-class}--has-slug .#{$block-class}--scrolls,
   &.#{$block-class}--has-ai-label .#{$block-class}--scrolls {
     @include utilities.ai-popover-gradient('default', 0, 'layer');
 
@@ -362,6 +366,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     height: $spacing-08;
   }
 
+  .#{$block-class}__slug-and-close,
   .#{$block-class}__ai-label-and-close {
     position: absolute;
     z-index: 10; /* must be higher than title container border bottom */
@@ -464,7 +469,10 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
   inset: 0;
 }
 
-.#{$block-class}--has-ai-label + .#{$block-class}__overlay {
+.#{$block-class}--has-slug
+  + .#{$block-class}__overlay
+  .#{$block-class}--has-ai-label
+  + .#{$block-class}__overlay {
   /* stylelint-disable-next-line carbon/theme-token-use */
   background-color: $ai-overlay;
 }
