fix(Pageheader): scrollable headers are not tabbable (#6145)
* fix(Pageheader): scrollable headers are not tabbable

* fix: avt test fixes

* fix(Pageheader): title prop support and refactor

* fix(Pageheader): added tooltipAlignment as prop inside title

* fix(Pageheader): title and icon alignment

---------

Co-authored-by: David Menendez <damenend@gmail.com>

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -433,13 +433,26 @@ $right-section-alt-width: 100% - $left-section-alt-width;
     }
   }
 
+  .#{$block-class}__tooltip {
+    min-width: 0;
+    flex-basis: auto;
+
+    button {
+      border-block-end: none;
+      cursor: default;
+    }
+  }
+  .#{$block-class}__titleText {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .#{$block-class}__title {
     @include type.type-style('heading-04');
 
+    display: flex;
     min-height: $spacing-08;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 
   .#{$block-class}__title--editable {
