--- a/packages/ibm-products/src/components/Tearsheet/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Tearsheet/_storybook-styles.scss
@@ -23,3 +23,7 @@
 .tearsheet-stories__tabs .#{c4p-settings.$carbon-prefix}--tab-content {
   display: none;
 }
+
+.step-action-button {
+  width: 33.33%;
+}
